...
    // : context
    //     .select<UserProfileCubit, List<UserProfile>>((e) => e.fetchedUsers);
    final selecUsersIds = dataProv.selecUsersIds;
    return users.isEmpty
        ? const SizedBox.shrink()
        : ListView.separated(
            key: const Key('ListViewKey'),
            separatorBuilder: (c, i) => const Divider(),
            controller: scrollController,
            shrinkWrap: true,
            restorationId: '${users.length}',
            itemCount: users.length,
            itemBuilder: (BuildContext context, i) {
...
